Add tokero tasks. (#108)
